--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 node_modules
 .DS_Store
+.idea
+public/css/app.css
+public/css/app.min.css
+public/css/lib.css
+public/css/lib.min.css
+public/js/app.js
+public/js/app.min.js
+public/js/lib.js
+public/js/lib.min.js
