--- a/package.json
+++ b/package.json
@@ -18,7 +18,19 @@
   "homepage": "https://github.com/1000ch/cssr",
   "dependencies": {
     "express": "^4.8.4",
+    "fastclick": "^1.0.3",
     "jade": "^1.5.0",
+    "jquery": "^2.1.1",
+    "normalize.css": "^3.0.1",
     "ucss": "^0.4.6-beta"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-stylus": "^0.18.0",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-csscomb": "^3.0.0",
+    "grunt-csso": "^0.6.3"
   }
 }
