--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-stylus": "^0.18.0",
     "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "^3.0.0",
     "grunt-csso": "^0.6.3"
   }
