--- a/package.json
+++ b/package.json
@@ -38,9 +38,7 @@
     "promise": "^5.0.0",
     "request": "^2.40.0",
     "ucss": "^0.4.6-beta",
-    "url": "^0.10.1"
-  },
-  "devDependencies": {
+    "url": "^0.10.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
