--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "grunt build && node index.js",
-    "postinstall": "grunt build"
+    "postinstall": "bower i && grunt build"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/1000ch/cssr",
   "dependencies": {
     "async": "^0.9.0",
+    "bower": "^1.3.9",
     "cheerio": "^0.17.0",
     "express": "^4.8.4",
     "grunt": "^0.4.5",
