--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-stylus": "^0.18.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
