--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "jquery": "~2.1.1",
     "mustache": "~0.8.2",
     "normalize.css": "~3.0.1",
-    "cheet.js": "~0.3.2"
+    "cheet.js": "~0.3.2",
+    "facebook-button": "~0.1.5",
+    "twitter-button": "~0.1.7"
   }
 }
