--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-stylus": "^0.18.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "^3.0.0",
     "grunt-csso": "^0.6.3",
+    "grunt-vulcanize": "^0.4.1",
     "jade": "^1.5.0",
     "promise": "^5.0.0",
     "request": "^2.40.0",
