--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,6 @@
     "tests"
   ],
   "dependencies": {
-    "x-zangief": "1000ch/x-zangief",
     "fastclick": "~1.0.3",
     "jquery": "~2.1.1",
     "mustache": "~0.8.2",
@@ -23,6 +22,7 @@
     "cheet.js": "~0.3.2",
     "facebook-button": "~0.1.5",
     "twitter-button": "~0.1.7",
-    "gplus-elements": "~0.2.1"
+    "gplus-elements": "~0.2.1",
+    "x-zangief": "~0.1.1"
   }
 }
