--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "homepage": "https://github.com/1000ch/cssr",
   "dependencies": {
     "async": "^0.9.0",
-    "bower": "^1.3.9",
+    "bower": "^1.3.12",
     "cheerio": "^0.17.0",
-    "express": "^4.8.4",
+    "express": "^4.10.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
@@ -47,7 +47,6 @@
     "jade": "^1.5.0",
     "promise": "^5.0.0",
     "request": "^2.40.0",
-    "ucss": "^0.4.6-beta",
-    "url": "^0.10.1"
+    "ucss": "^0.4.6-beta"
   }
 }
