--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Go home and be a family man!",
   "main": "index.js",
   "scripts": {
-    "start": "grunt build && node index.js",
-    "postinstall": "bower i && grunt build"
+    "start": "gulp build && node index.js",
+    "postinstall": "bower i && gulp build"
   },
   "repository": {
     "type": "git",
@@ -33,17 +33,12 @@
     "bower": "^1.3.12",
     "cheerio": "^0.17.0",
     "express": "^4.10.1",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-stylus": "^0.18.0",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-csscomb": "^3.0.0",
-    "grunt-csso": "^0.6.3",
-    "grunt-vulcanize": "^0.4.1",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-csscomb": "^3.0.3",
+    "gulp-csso": "^1.0.0",
+    "gulp-stylus": "^2.0.1",
+    "gulp-uglify": "^1.2.0",
     "jade": "^1.5.0",
     "promise": "^5.0.0",
     "request": "^2.40.0",
