--- a/package.json
+++ b/package.json
@@ -29,15 +29,13 @@
   },
   "homepage": "https://github.com/1000ch/cssr",
   "dependencies": {
-    "async": "^0.9.0",
-    "bower": "^1.3.12",
     "cheerio": "^0.17.0",
     "express": "^4.10.1",
+    "got": "^8.0.1",
     "gulp": "^3.8.11",
     "gulp-csscomb": "^3.0.3",
     "gulp-csso": "^1.0.0",
     "jade": "^1.5.0",
-    "request": "^2.40.0",
     "ucss": "^0.4.6-beta",
     "x-zangief": "^2.0.0"
   }
